--- a/user/templates/css/style.css
+++ b/user/templates/css/style.css
@@ -3,6 +3,7 @@ body {
 	height: 100%;
 	font-family: "Nunito Sans", sans-serif;
 	-webkit-font-smoothing: antialiased;
+	background-color: #F5F5F5
 }
 
 h1,
@@ -108,6 +109,7 @@ ol {
 .spad {
 	padding-top: 50px;
     padding-bottom: 100px;
+	background-color: #fff;
 }
 
 .text-white h1,
@@ -971,8 +973,9 @@ ol {
 -----------------------*/
 
 .product {
-	padding-top: 0;
+	padding-top: 50px;
 	padding-bottom: 60px;
+	background-color: #fff;
 }
 
 .filter__controls {
@@ -3435,6 +3438,7 @@ ol {
 @media only screen and (min-width: 1200px) {
 	.container {
 		max-width: 1170px;
+
 	}
 }
 
@@ -3916,4 +3920,7 @@ ol {
 	.categories__text:before {
 		height: 250px;
 	}
+}
+.row-btn{
+	padding-top: 15px;
 }
